force-app/main/default/objects/VisualAntidote__FastFormsTokenInfo__c/fields/VisualAntidote__API_Version__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__API_Version__c</fullName>
    <label>API Version</label>
    <length>4</length>
    <type>Text</type>
</CustomField>