force-app/main/default/objects/VisualAntidote__FastFormsTokenInfo__c/fields/VisualAntidote__Is_Native_Setup_Done__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Is_Native_Setup_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Native Setup Done</label>
    <type>Checkbox</type>
</CustomField>