force-app/main/default/objects/VisualAntidote__FastFormsTokenInfo__c/fields/VisualAntidote__Reset__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Reset__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this field if you want to reset your Refresh Token. Do not forget to Publish your form after you check this field.</inlineHelpText>
    <label>Reset Refresh Token</label>
    <type>Checkbox</type>
</CustomField>